testsuite/bsc.lib/CReg/TestCReg_TooBig.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling TestCReg_TooBig.bsv
code generation for sysTestCReg_TooBig starts
Error: "PreludeBSV.bsv", line 1004, column 37: (S0015)
  Bluespec evaluation-time error: `mkCReg' cannot have more than five ports
  During elaboration of `error' at "PreludeBSV.bsv", line 1004, column 13.
  During elaboration of `rg' at "TestCReg_TooBig.bsv", line 5, column 19.
  During elaboration of `sysTestCReg_TooBig' at "TestCReg_TooBig.bsv", line 3,
  column 8.
